re-implement how new ext is created for Impactify logic, some CR fixes